Samples wrap & scroll correctly.
Scrolling fixed with overflow-scrolling.
Better 568px breakpoint for media rules
Flex layout instead of float.
Close navmask with class instead of inline style

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
 #wrapper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 #header {
@@ -88,7 +88,28 @@
   width: 0;
 }
 
-@media(max-width: 499px) {
+#contentFrame {
+  margin-left: 10px;
+  overflow: auto;
+  height: calc(100vh - 146px);
+  padding: 0 0 10px 0;
+  -webkit-overflow-scrolling: touch;
+}
+
+@media(max-width: 567px) {
+  #wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #header {
+    flex: 0 0 124px;
+  }
+
+  #contentFrame {
+    flex-grow: 1;
+  }
+
   #logowords {
     padding: 12px 0 0 24px;
     margin-left: 0;
@@ -163,18 +184,15 @@
   z-index: 9;
 }
 
+#navmask.closed {
+  display: none;
+}
+
 #content {
   margin-right: 12px;
 }
 
-#contentFrame {
-  margin-left: 10px;
-  overflow: auto;
-  height: calc(100vh - 146px);
-  padding: 0 0 10px 0;
-}
-
-@media(min-width: 500px) {
+@media(min-width: 568px) {
   #leftnav {
     width: 166px;
     float: left;
